2010-03-10  Sanel <karijes@users.sourceforge.net>

	* edelib/Netwm.h:
	* src/Netwm.cpp: report NETWM_CHANGED_WINDOW_ICON when icon gets changed
	via _NET_WM_ICON message
	* configure.in: amd64 requires '-fPIC' even if library is compiled as
	static
	* examples/efile.cpp: some warning reduction


2010-03-07  Sanel <karijes@users.sourceforge.net>

	* src/Netwm.cpp: fixed property fetching issues on 64-bit platform

2010-02-25  Sanel <karijes@users.sourceforge.net>

	* edelib/Netwm.h:
	* src/Netwm.cpp: added netwm_window_set_state() and EWMH states, as generic
	facility for setting window states; small code refactoring

2010-02-18  Sanel <karijes@users.sourceforge.net>

	* src/Netwm.cpp: use correct state for setting maximized state; by default
	is toggled state for cases when maximization is issued on already
	maximized window

2010-02-16  Sanel <karijes@users.sourceforge.net>

	* m4/compiler-name.m4: s/ac_compiler_name/ac_compiler_vendor and
	s/EDELIB_COMPILER_NAME/EDELIB_COMPILER_VENDOR
	* configure.in:
	* Jamconfig.in: there is no need to set SUN_COMPILER variable when
	SunStudio is used, now configure script will figure it out

2010-02-15  Sanel <karijes@users.sourceforge.net>

	* m4/fltk.m4: check if FLTK was compiled with XFT support

2010-02-11  Sanel <karijes@users.sourceforge.net>

	* src/Theme.cpp: some cleanup

2010-02-04  Sanel <karijes@users.sourceforge.net>

	* configure.in:
	* Jamrules:
	* po/update-message.sh.in: update-messages.sh will be filled with xgettext
	path if available

2010-02-03  Sanel <karijes@users.sourceforge.net>

	* po/update-messages.sh:
	* po/edelib.pot: default template file should be named edelib.pot
	* Jamrules:
	* Jamfile:
	* po/Jamfile: modified MakeInstallPrivate so it can accept target
	filename; added ability to install translated files in locale directory

2010-02-02  Sanel <karijes@users.sourceforge.net>

	* po/update-messages.sh:
	* po/messages.pot: created directory for translations with accompanying files
